--- a/index.html
+++ b/index.html
@@ -15,8 +15,25 @@
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-highlight">Peter Parker</span> World</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-highlight">Peter Parker</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mahmud-hasan-14b3321a8/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="/images/my-bg (1).png" alt="My First image">
+        </div>
+    </section>
 </body>
 
 </html>
