--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
             <img src="/images/my-bg (1).png" alt="My First image">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="/images/my-bg(2).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="_blank" href="https://github.com/Mahmud-cse/web-p">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
