--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container ">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-highlight">Peter Parker</span> World</h1>
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container ">
         <div class="half-width">
             <img src="/images/my-bg(2).png" alt="">
         </div>
@@ -47,6 +47,28 @@
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
             <a class="link-button" target="_blank" href="https://github.com/Mahmud-cse/web-p">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="exp-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div class="exp-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
