--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="experience">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="exp-item">
+            <div id="left-border" class="exp-item">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="name-highlight">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -62,7 +62,7 @@
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
 
-            <div class="exp-item">
+            <div id="right-border" class="exp-item">
                 <h2>Baby Web Developer</h2>
                 <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -71,6 +71,10 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
