--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 ME</a>
         </div>
         <div class="half-width">
-            <img src="/images/my-bg (1).png" alt="My First image">
+            <img src="images/my-bg (1).png" alt="My First image">
         </div>
     </section>
 
     <section class="dream-big flexible-container ">
         <div class="half-width">
-            <img src="/images/my-bg(2).png" alt="">
+            <img src="images/my-bg(2).png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
