--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="top-banner flexible-container ">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Peter Parker</span> World</h1>
+            <h1><span class="name-highlight">Mahmud Hasan</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>
                 You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
